--- a/pages/dh.wxml
+++ b/pages/dh.wxml
@@ -3,7 +3,7 @@
 	<mb_navBar id="mb_navBar1" show="{{true}}" backColor="#FFFFFF" activeColor="#007AFF" fontSize="32rpx" bindnavbarTap="顶部选项卡1项目被单击" />
 
 	<view hidden="{{mb_freePanel[0]}}" style="margin:10px 10px 0px 10px;background-color:#FFFFFF;width:auto;height:80rpx;position:relative;border: 1px solid #E9E9E9;border-radius: 15px;">
-		<mb_image id="mb_image1" mb_mode="scaleToFill" mb_style="position:absolute;top:20rpx;left:660rpx;width:40rpx;height:40rpx;border-radius:0px" show="{{true}}" path="/images/icongbb.png" bindonClick="图片框1被单击" />
+		<mb_image id="mb_image1" mb_mode="scaleToFill" mb_style="position:absolute;top:20rpx;left:660rpx;width:40rpx;height:40rpx;border-radius:0px" show="{{false}}" path="/images/icongbb.png" bindonClick="图片框1被单击" />
 
 
 		<view style="position:absolute;top:8rpx;left:10rpx;width:640rpx;height:64rpx;display:flex;flex-direction:row;align-items:center;border-style:solid;border-width:1px;border-color:#FFFFFF;border-radius:5px;box-sizing:border-box;background-color:#FFFFFF">
